--- a/index.html
+++ b/index.html
@@ -17,28 +17,12 @@
       <textarea
         name="input"
         id="input"
+        class="use_keyboard_input"
         cols="30"
         rows="5"
         placeholder="Hello Please type something."
       ></textarea>
     </div>
-    <!-- <div class="keyboard">
-      <div class="keyboard_keys">
-        <button type="button" class="keyboard_key">a</button>
-        <button type="button" class="keyboard_key keyboard_key_wide">
-          <i class="material-icons">backspace</i>
-        </button>
-        <button type="button" class="keyboard_key keyboard_key_extra_wide">
-          <i class="material-icons">space_bar</i>
-        </button>
-        <button type="button" class="keyboard_key keyboard_key_wide keyboard_key_activateable">
-          <i class="material-icons">keyboard_capslock</i>
-        </button>
-        <button type="button" class="keyboard_key keyboard_key_wide keyboard_key_dark">
-          <i class="material-icons">check_circle</i>
-        </button>
-      </div>
-    </div> -->
     <script src="./app.js"></script>
   </body>
 </html>
